--- a/tests/index.html
+++ b/tests/index.html
@@ -2,16 +2,14 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>TimecodeHash tests</title>
+	<title>RamRod tests</title>
 	<link rel="stylesheet" href="qunit.css">
 </head>
-<body>t : <a href="#track@5m">named jump at 5mn</a>, <a href="#@15m">unnamed jump at 15mn</a>
-	</p>
-
+<body>
 	<div id="qunit"></div>
 	<div id="qunit-fixture"></div>
 	<script src="qunit.js"></script>
-	<script src="../src/robot.js"></script>
+	<script src="../libs/robot.js"></script>
 	<script src="tests.js"></script>
 </body>
 </html>
