--- a/tests/index.html
+++ b/tests/index.html
@@ -10,6 +10,7 @@
 	<div id="qunit-fixture"></div>
 	<script src="qunit.js"></script>
 	<script src="../libs/robot.js"></script>
+	<script src="../libs/world.js"></script>
 	<script src="tests.js"></script>
 </body>
 </html>
