--- a/index.html
+++ b/index.html
@@ -6,23 +6,17 @@
 
 	<script src="libs/robot.js"></script>
 	<script src="libs/world.js"></script>
+	<script src="libs/control.v0.js"></script>
 	<link rel="stylesheet" href="libs/renderer0.css" />
 </head>
 <body>
 	<main>
 		<div id="world"></div>
-		<div id="control">
-			<ul id="palette">
-				<li class="control-turnLeft">↶</li>
-				<li class="control-moveFoward">↑</li>
-				<li class="control-turnRight">↷</li>
-				<li class="control-moveReward">↓</li>
-			</ul>
-			<ol id="instructions">
-			</ol>
-			<button>Execute</button>
-		</div>
+		<div id="control">	</div>
 	</main>
+	<footer>
+		<a href="./tests">Ça ne marche pas ? testez</a>
+	</footer>
 	<script src="libs/game.js"></script>
 </body>
 </html>
