prototyping command panel

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>RamRod</title>
 
+	<script src="external/jquery.js"></script>
 	<script src="libs/robot.js"></script>
 	<script src="libs/world.js"></script>
 	<script src="libs/control.v0.js"></script>
