--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="libs/robot.js"></script>
 	<script src="libs/world.js"></script>
 	<script src="libs/control.v0.js"></script>
-	<link rel="stylesheet" href="libs/renderer0.css" />
+	<link rel="stylesheet" href="libs/control.v0.css" />
 </head>
 <body>
 	<main>
