--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script src="external/jquery.js"></script>
 	<script src="libs/robot.js"></script>
 	<script src="libs/world.js"></script>
+	<script src="libs/i18n.js"></script>
 	<script src="libs/control.v0.js"></script>
 	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="libs/control.v0.css" />
