#6 <meta> about it

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="libs/world.js"></script>
 	<script src="libs/i18n.js"></script>
 	<script src="libs/control.v0.js"></script>
+	<meta name="viewport" content="width=device-width, user-scalable=no, target-densityDpi=medium-dpi, initial-scale=0.8" />
 	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="libs/control.v0.css" />
 </head>
