--- a/libs/control.v0.html
+++ b/libs/control.v0.html
@@ -2,7 +2,7 @@
 	<li class="control-turnLeft">↶</li>
 	<li class="control-moveFoward">↑</li>
 	<li class="control-turnRight">↷</li>
-	<li class="control-moveReward">↓</li>
+	<li class="control-moveBackward">↓</li>
 </ul>
 <ol id="instructions">
 </ol>
