--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 	<script src="libs/world.js"></script>
 	<script src="libs/i18n.js"></script>
 	<script src="libs/control.v0.js"></script>
+	<script src="libs/playfield.v0.js"></script>
 	<meta name="viewport" content="width=device-width, user-scalable=no, target-densityDpi=medium-dpi, initial-scale=0.8" />
 	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="libs/control.v0.css" />
+	<link rel="stylesheet" href="libs/playfield.v0.css" />
 </head>
 <body>
 	<main>
-		<div id="world"></div>
+		<div id="playfield"></div>
 		<div id="control">	</div>
 	</main>
 	<footer>
