Adding isFinished on world
Adding levelHeight, level With, robotX and robotY on game

--- a/tests/index.html
+++ b/tests/index.html
@@ -12,5 +12,6 @@
 	<script src="../libs/robot.js"></script>
 	<script src="../libs/world.js"></script>
 	<script src="tests.js"></script>
+	<script src="worldTests.js"></script>
 </body>
 </html>
