--- a/tests/index.html
+++ b/tests/index.html
@@ -9,9 +9,9 @@
 	<div id="qunit"></div>
 	<div id="qunit-fixture"></div>
 	<script src="qunit.js"></script>
-	<script src="../libs/robot.js"></script>
-	<script src="../libs/world.js"></script>
-	<script src="tests.js"></script>
+	<script src="../external/jquery.js"></script>
+	<script src="../libs/model/world.js"></script>
+	<script src="../libs/model/position.js"></script>
 	<script src="worldTests.js"></script>
 </body>
 </html>
