--- a/tests/index.html
+++ b/tests/index.html
@@ -9,9 +9,12 @@
 	<div id="qunit"></div>
 	<div id="qunit-fixture"></div>
 	<script src="qunit.js"></script>
+	<script src="sinon-1.10.3.js"></script>
 	<script src="../external/jquery.js"></script>
-	<script src="../libs/model/world.js"></script>
 	<script src="../libs/model/position.js"></script>
+	<script src="../libs/model/world.js"></script>
+	<script src="../libs/model/content.js"></script>
+	<script src="../libs/model/item.js"></script>
 	<script src="worldTests.js"></script>
 </body>
 </html>
