content creation from dto only wall.isBlocking() handled for now.

--- a/tests/index.html
+++ b/tests/index.html
@@ -16,5 +16,6 @@
 	<script src="../libs/model/content.js"></script>
 	<script src="../libs/model/item.js"></script>
 	<script src="worldTests.js"></script>
+	<script src="contentTests.js"></script>
 </body>
 </html>
